--- a/.github/workflows/Build_X86_64.yml
+++ b/.github/workflows/Build_X86_64.yml
@@ -165,6 +165,7 @@ jobs:
           done
           cd openwrt
           rm -rf .config
+          echo "COMMIT_TIME=auto update config: $(date +'%Y-%m-%d %H:%M')" >> $GITHUB_ENV
 
       - name: Git Auto Update Config
         uses: stefanzweifel/git-auto-commit-action@v5.0.0
@@ -172,7 +173,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          commit_message: auto update config
+          commit_message: ${{ env.COMMIT_TIME }}
           branch: main
           commit_author: Jejz168 <Jejz168@foxmail.com>
           add_options: '-u'
