--- a/config/leanlede_config/armv8.config
+++ b/config/leanlede_config/armv8.config
@@ -3369,7 +3369,7 @@ CONFIG_PACKAGE_perl-http-date=y
 # CONFIG_PACKAGE_perl-www-curl is not set
 # CONFIG_PACKAGE_perl-www-mechanize is not set
 # CONFIG_PACKAGE_perl-www-robotrules is not set
-CONFIG_PACKAGE_perl-xml-parser=y
+# CONFIG_PACKAGE_perl-xml-parser is not set
 # CONFIG_PACKAGE_perlbase-anydbm-file is not set
 # CONFIG_PACKAGE_perlbase-app is not set
 # CONFIG_PACKAGE_perlbase-archive is not set
