--- a/.github/workflows/Build_X86_64[Docker].yml
+++ b/.github/workflows/Build_X86_64[Docker].yml
@@ -34,8 +34,8 @@ on:
         description: 'SSH66 connection to Actions'
         required: false
         default: 'false'
-  #schedule:
-    #- cron: 50 18 */2 * *
+  schedule:
+    - cron: 11 19 * * *
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
